--- a/MapRotationTracker/Style/RadioButtonTheme.xaml
+++ b/MapRotationTracker/Style/RadioButtonTheme.xaml
@@ -13,7 +13,7 @@
 
                             <TextBlock Text="{TemplateBinding Property=Content}"
                                        VerticalAlignment="Center"
-                                       Margin="50,0,0,0"/>
+                                       HorizontalAlignment="Center"/>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
